Changed the general style & layout of the website

--- a/public/style.css
+++ b/public/style.css
@@ -1,124 +1,141 @@
-html {
-	min-height:100%;
-}
+/* Fonts from Google Fonts */
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:700|Open+Sans:400,700,800);
 
+/* Reset all margins */
+* {
+  margin:0;
+  padding:0;
+}
 body {
-	background-attachment:fixed,fixed;
-	background-image:url("/images/dot.png"),url("/images/frittata.jpg");
-	background-position:center center,center center;
-	background-repeat:repeat,no-repeat;
-	background-size:auto,cover;
-	
-	font-family:'Raleway', sans-serif;
-	
-	margin:0;
-	padding:0;
+  background:url('images/grid.png') #DDD;
+  color:#000;
+  font-family:'Open Sans', sans-serif;
+  font-size:12px;
 }
-
-/* Formatting */
-.page-center {
-	min-width:600px;
-	max-width:1200px;
-	margin-left: auto;
-	margin-right: auto;
-	width:100%;
+html {
+  min-height:100%;
 }
 
 /* Navigation */
-#nav {
-	background:#FFF;
-	display:table;
-	font-size: 12pt;
-	width:100%;
+#navigation {
+  background-color:rgba(255,255,255,0.95);
+  border-bottom:1px solid #333;
+  height:33px;
+  line-height:29px;
+  color:#000;
+  padding:2px 0 0 0;
+  position:fixed;
+  top:0px;
+  left:0px;
+  width:100%;
 }
-#nav-content div {
-	display:table;
-	height: 38px;
+#navigation a {
+  display:inline-block;
+  color:#333;
+  font-weight:700;
+  text-decoration:none;
+  vertical-align:middle;
 }
-#nav-left {
-	float:left;
-	line-height:30px;
+#navigation a i {
+  padding-right:2px;
+  line-height:29px;
 }
-#nav-right {
-	float:right;
-	line-height:30px;
+#navigation a:hover {
+  color:#000;
 }
-#nav a {
-	display:inline-block;
-	font-weight:700;
-	padding:4px;
-	text-decoration:none;
+#navigation a:not(#navigation-home) {
+  padding:0 0 0 15px;
 }
-#nav-left a {
-	color:#444;
-	padding:4px 18px;
+#navigation a:hover:not(#navigation-home) {
+  text-decoration:underline;
 }
-#nav-right a {
-	color:#444;
-	padding:4px 18px;
+#navigation-home {
+  border-right:1px solid #666;
+  font-family:'Source Sans Pro', sans-serif;
+  font-size:24px;
+  padding:0 15px 0 15px;
 }
-#nav-left a:hover, #nav-right a:hover {
-	background: #DDD;
-	text-decoration:underline;
+#login-navigation {
+  padding:2px 0 0 0;
+  height:33px;
+  line-height:29px;
+  position:fixed;
+  text-align:right;
+  top:0px;
+  right:0px;
 }
-#nav-brand {
-	border-right:1px solid #000;
-	color:#000;
-	float:left;
-	font-size:24px;
-	line-height:30px;
-	text-align:center;
-	text-decoration:none;
-	width:88px;
+#login-navigation a {
+  display:inline-block;
+  color:#333;
+  font-weight:700;
+  text-decoration:none;
+  padding:0 15px 0 0;
+  vertical-align:middle;
 }
-#nav-brand:hover {
-	background:none;
-	text-decoration:none;
+#login-navigation a i {
+  padding-right:2px;
+  line-height:29px;
+}
+#login {
+  color:#893A25 !important;
+}
+#login:hover {
+  text-decoration:underline;
+}
+#signup {
+  color:#278E23 !important;
+}
+#signup:hover {
+  text-decoration:underline;
 }
 
-/* Content */
-#special {
-	background:rgba(255,255,255,0.5);
-	display:table;
-	width:100%;
+/* Banner */
+#banner {
+  background:url('images/banners/lol.jpg') no-repeat;
+  background-size:cover;
+  color:#FFF;
+  border-bottom:1px solid #333;
+  display:table;
+  vertical-align:middle;
+  height:150px;
+  padding:100px 0 0 0;
+  text-shadow:0 0 2px #333;
+  font-size:16px;
+  width:100%;
 }
-#special-content {
-	background:rgba(255,255,255,0.5);
-	display:table;
-	height:250px;
+#banner span {
+  padding:0 0 0 25px;
 }
-#special-content-middle {
-	display:table-cell;
-	vertical-align:middle;
+#banner strong {
+  display:block;
+  font-family:'Source Sans Pro', sans-serif;
+  font-weight:700;
+  font-size:48px;
+  text-shadow:0px 0px 6px #111;
+  padding:0 0 0 25px;
 }
-#special-content-middle div {
-	display:block;
+
+/* Articles */
+article {
+  width:100%;
 }
-#special-content-title {
-	display:block;
-	font-size:32pt;
-	font-weight:700;
-	padding:0 0 0 24px;
+article .article-content {
+  background:rgba(255, 255, 255, 0.9);
+  border:1px solid #333;
+  margin:5px 5px 5px 86px;
+  padding:5px;
+  min-height:65px;
 }
-#special-content-text {
-	font-size:16pt;
-	padding:0 0 0 12px;
+article .article-icon {
+  border:1px solid #666;
+  float:left;
+  margin-left:5px;
 }
-.news-article {
-	background:rgba(255,255,255,0.5);
-	font-size:12pt;
-	min-height:104px;
-	margin:8px auto;
+
+/* Footer */
+#footer {
+  padding-left:10px;
 }
-.news-article-icon {
-	float:left;
-	height:88px;
-	width:88px;
-	margin:4px;
-	padding:4px;
-}
-.news-article-title {
-	font-size:14pt;
-	font-weight:700;
-	padding:4px 0;
+#footer a {
+  font-weight:bold;
 }
