--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
 /* Fonts from Google Fonts */
-@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:700|Open+Sans:400,700,800);
+@import url(//fonts.googleapis.com/css?family=Source+Sans+Pro:700|Open+Sans:400,700,800);
 
 /* Reset all margins */
 * {
