--- a/public/style.css
+++ b/public/style.css
@@ -21,13 +21,14 @@ html {
 #navigation {
   background-color:rgba(255,255,255,0.95);
   border-bottom:1px solid #333;
-  height:33px;
+  box-sizing: border-box;
+  height:35px;
   line-height:29px;
   color:#000;
   padding:2px 0 0 0;
   position:fixed;
-  top:0px;
-  left:0px;
+  top:0;
+  left:0;
   width:100%;
 }
 #skrollr-body {
@@ -62,17 +63,17 @@ html {
   padding:0 15px 0 15px;
 }
 #login-navigation {
+  box-sizing: border-box;
   padding:2px 0 0 0;
-  height:33px;
+  height:35px;
   line-height:29px;
   position:fixed;
   text-align:right;
-  top:0px;
-  right:0px;
+  top:0;
+  right:0;
 }
 #login-navigation a {
   display:inline-block;
-  color:#333;
   font-weight:700;
   text-decoration:none;
   padding:0 15px 0 0;
@@ -83,13 +84,13 @@ html {
   line-height:29px;
 }
 #login {
-  color:#893A25 !important;
+  color:#893A25;
 }
 #login:hover {
   text-decoration:underline;
 }
 #signup {
-  color:#278E23 !important;
+  color:#278E23;
 }
 #signup:hover {
   text-decoration:underline;
@@ -99,11 +100,12 @@ html {
 #banner {
   background:url('images/banners/lol.jpg') no-repeat;
   background-size:cover;
+  box-sizing: border-box;
   color:#FFF;
   border-bottom:1px solid #333;
   display:table;
   vertical-align:middle;
-  height:150px;
+  height:250px;
   padding:100px 0 0 0;
   text-shadow:0 0 2px #333;
   font-size:16px;
@@ -117,7 +119,7 @@ html {
   font-family:'Source Sans Pro', sans-serif;
   font-weight:700;
   font-size:48px;
-  text-shadow:0px 0px 6px #111;
+  text-shadow:0 0 6px #111;
   padding:0 0 0 25px;
 }
 
