--- a/public/style.css
+++ b/public/style.css
@@ -16,23 +16,22 @@ html {
 }
 
 /* Navigation */
-#navigation {
+.navigation {
   background-color:rgba(255,255,255,0.95);
-  border-bottom:1px solid #333;
-  box-sizing: border-box;
-  color:#000;
   padding:2px 0 2px 0;
   position:fixed;
   top:0;
   left:0;
   width:100%;
+  display: block;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12); }
 }
 #skrollr-body {
     float: left;
     width: 100%;
     height: 100%;
 }
-#navigation a {
+.navigation a {
   display:inline-block;
   color:#333;
   font-weight:700;
@@ -41,39 +40,39 @@ html {
   text-decoration:none;
   vertical-align:middle;
 }
-#navigation a i {
+.navigation a i {
   padding-right:2px;
 }
-#navigation a:hover {
+.navigation a:hover {
   color:#000;
 }
-#navigation a:hover:not(#navigation-home) {
+.navigation a:hover:not(#navigation-home) {
   text-decoration:underline;
 }
-#navigation #navigation-home {
+.navigation .navigation-home {
   border-right:1px solid #666;
   font-family:'Source Sans Pro', sans-serif;
   font-size:24px;
   padding-left:15px;
   padding-right:15px;
 }
-#navigation #navigation-login {
+.navigation .navigation-button {
   float:right;
 }
-#navigation #navigation-login a {
+.navigation .navigation-button:hover {
+  text-decoration:underline;
+}
+.navigation .navigation-button a {
   padding:0 15px 0 0;
 }
-#navigation .login {
+.navigation .login {
   color:#893A25;
 }
-#navigation .login:hover {
-  text-decoration:underline;
-}
-#navigation .signup {
+.navigation .signup {
   color:#278E23;
 }
-#navigation .signup:hover {
-  text-decoration:underline;
+.navigation .logout {
+  color:#893A25;
 }
 
 /* Banner */
@@ -112,13 +111,11 @@ article {
 }
 article .article-content {
   background:rgba(255, 255, 255, 0.9);
-  border:1px solid #333;
   margin:10px 10px 10px 95px;
   padding:5px;
   min-height:65px;
 }
 article .article-icon {
-  border:1px solid #666;
   float:left;
   height:75px;
   margin-left:10px;
@@ -138,4 +135,12 @@ article .article-author {
 }
 #footer a {
   font-weight:bold;
+}
+
+@media only screen and (max-width : 992px) {
+
+}
+
+@media only screen and (max-width : 600px) {
+
 }
