--- a/public/style.css
+++ b/public/style.css
@@ -132,6 +132,55 @@ article .article-author {
   text-decoration: none;
 }
 
+/* Login Page */
+loginForm {
+  width: 100%;
+}
+
+loginForm .login-body {
+  background:rgba(255, 255, 255, 0.9);
+  border:1px solid #d3d3d3;
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px #788588;
+  margin: 10% 10% 10% 10%;
+  padding:5px;
+  min-height:65px;
+}
+
+loginForm .login-header {
+  font-size: 20pt;
+  color: #252525;
+  padding: 10px 10px 10px 10px;
+}
+
+loginForm form {
+  text-align: center;
+  padding: 10px 10px 10px 10px;
+}
+
+loginForm form input[type="text"] {
+  width: 200px;
+  line-height: 30pt;
+}
+
+loginForm form input[type="password"] {
+  width: 200px;
+  line-height: 30pt;
+}
+
+
+loginForm form label {
+  font-size: 14pt;
+}
+
+loginForm form div {
+    padding: 5px 0px 5px 0px;
+}
+
+loginForm form input {
+  text-align: center;
+}
+
 /* Footer */
 #footer {
   padding-left:10px;
